--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -7,6 +7,7 @@
     <body>
         <div class="main-content">
             {{>header}}
+            <p>This site was created by Chun Wu. It uses data from mapbox.com and darksky.net!</p>
             <img class="portrait" src="img/chun.jpg" alt="cloud" />
         </div>
         {{>footer}}
